Upgrade 'Find' command
The previous 'Find' command can only support multiple 'Name' keywords.

We want Socius to support all properties (e.g. 'Social', 'Tutorial Group', etc)

This commit implements an updated 'Find' command that supports multiple keywords of all properties. The format follows 'Add' and 'Edit'. A 'MultipleParsers' class was implemented to easily track how many of what Predicates are in use in a 'Find' command.